# blog_study_discord_bot

./: .gitignore  Cargo.toml  README.md
blog_thread_discordbot/: README.md
blog_thread_role_discordbot/: Cargo.toml
blog_thread_role_discordbot/src/: main.rs
src/: main.rs
